service-mesh/istio-ingressgateway.yml
apiVersion: v1
kind: Service
metadata:
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.9.0
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http2
      nodePort: 32075
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 32457
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: redis
      nodePort: 30379
      port: 6379
      protocol: TCP
      targetPort: 56379
    - name: status-port
      nodePort: 30553
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: tls
      nodePort: 31466
      port: 15443
      protocol: TCP
      targetPort: 15443
    - name: tcp
      nodePort: 32684
      port: 31400
      protocol: TCP
      targetPort: 31400
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
