service-mesh/gateway-pezsh.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pezsh-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "pez.sh"
        - "*.pez.sh"
