service-mesh/virtualservice-istio-grafana.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grafana-vs
spec:
  hosts:
  - "grafana.istio.pez.sh"
  gateways:
  - pezsh-gateway
  http:
  - route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
