service-mesh/virtualservice-prometheus.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
spec:
  hosts:
  - "prometheus.pez.sh"
  gateways:
  - pezsh-gateway
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: prometheus.istio-system.svc.cluster.local
