service-mesh/virtualservice-redis.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-vs
spec:
  hosts:
  - "redis.pez.sh"
  gateways:
  - pezsh-gateway
  tcp:
  - route:
    - destination:
        host: redis.redis.svc.cluster.local
